<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/terms_of_use"
                android:textSize="27dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="10dp"
                android:text="@string/attention"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="12dp"
                android:text="@string/important_notice_for_amateur_athletes"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="2dp"
                android:text="@string/importance_notice_content"
                android:textSize="13dp" />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="11dp"
                android:text="@string/physical_activity_notice"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="2dp"
                android:text="@string/physycal_activity_notice_content"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="11dp"
                android:text="@string/intellectual_property"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="2dp"
                android:text="@string/intellectual_property_content"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>